# backend/docs/swagger.yaml
@@ -31,6 +31,79 @@ info:
   title: Dev clash API
   version: "1.0"
 paths:
+  /api/events/create:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Create event (users can't do it)
+      parameters:
+      - in: formData
+        name: description
+        type: string
+      - in: formData
+        name: end_time
+        type: string
+      - in: formData
+        name: is_free
+        type: boolean
+      - in: formData
+        name: is_online
+        type: boolean
+      - in: formData
+        name: number_of_teams
+        type: integer
+      - in: formData
+        name: prize
+        type: string
+      - in: formData
+        name: start_time
+        type: string
+      - in: formData
+        name: team_size
+        type: integer
+      - collectionFormat: csv
+        in: formData
+        items:
+          type: string
+        name: tech_stack
+        type: array
+      - in: formData
+        name: title
+        type: string
+      - in: formData
+        name: type
+        type: string
+      - description: Event picture
+        in: formData
+        name: picture
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+      security:
+      - CookieAuth: []
+      summary: Create event
+      tags:
+      - event
   /api/image:
     get:
       consumes:
@@ -77,7 +150,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get current user profile settings
+      description: Get organizer profile
       produces:
       - application/json
       responses:
@@ -100,7 +173,7 @@ paths:
     post:
       consumes:
       - multipart/form-data
-      description: Get current user profile settings
+      description: Create team
       parameters:
       - description: Team name
         in: formData
@@ -124,8 +197,16 @@ paths:
       responses:
         "200":
           description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+        "413":
+          description: Request Entity Too Large
           schema:
             $ref: '#/definitions/wrapper.CustomError'
         "500":
@@ -134,7 +215,7 @@ paths:
             $ref: '#/definitions/wrapper.CustomError'
       security:
       - CookieAuth: []
-      summary: Organizer Profile
+      summary: Create team
       tags:
       - team
   /api/users/me/profile:
@@ -271,6 +352,14 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/wrapper.CustomError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+        "413":
+          description: Request Entity Too Large
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
         "500":
           description: Internal Server Error
           schema:
@@ -297,6 +386,10 @@ paths:
           description: OK
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/wrapper.CustomError'
+        "409":
+          description: Conflict
           schema:
             $ref: '#/definitions/wrapper.CustomError'
         "500":
